--- a/resources/index.html
+++ b/resources/index.html
@@ -1,134 +1,261 @@
-<!DOCTYPE html>
-<html>
+<!doctype html>
+<html lang="en" data-bs-theme="auto">
+
 <head>
-    <title>Nagger</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
-    <link rel="stylesheet" type="text/css" href="style.css">
-    <script>
-        function toggleEdit() {
-            var naggers = document.getElementsByClassName("nagger-container");
-            for (var i = 0; i < naggers.length; i++) {
-                var nagger = naggers[i];
-                var severity = nagger.getElementsByClassName("nagger-severity")[0];
-                var dateCreated = nagger.getElementsByClassName("nagger-date-created")[0];
-                var content = nagger.getElementsByClassName("nagger-content")[0];
-                var buttons = nagger.getElementsByClassName("nagger-buttons")[0];
-                if (severity.disabled) {
-                    severity.disabled = false;
-                    dateCreated.contentEditable = true;
-                    content.contentEditable = true;
-                    buttons.style.display = "flex";
-                } else {
-                    severity.disabled = true;
-                    dateCreated.contentEditable = false;
-                    content.contentEditable = false;
-                    buttons.style.display = "none";
-                }
-            }
-        }
-    </script>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+
+
+
+
+  <!-- Custom styles for this template -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.min.css" rel="stylesheet">
+  <!-- Custom styles for this template -->
+
+
+  <style>
+    @media (min-width: 768px) {
+      #dd {
+        min-height: 100vh;
+      }
+    }
+
+    @media (max-width: 768px) {
+      .card-item-column {
+        min-height: 13em;
+      }
+
+      #dd {
+        max-width: 80%;
+      }
+      #sidebarMenu {
+        max-width: 80%;
+      }
+    }
+    @media (min-width: 768px) {
+      .card-item-column {
+        min-height: 18em;
+      }
+    }
+
+    .cart-footer{
+      margin-top:auto;
+    }
+
+    .card {
+  transition: .10s, transform .10s ease;
+  -moz-transition: .10s, transform .10s ease;
+  -webkit-transition: .10s, transform .10s ease;
+}
+
+.card:hover {
+  cursor: pointer;
+  -ms-transform: scale(1.01); /* IE 9 */
+  -webkit-transform: scale(1.01); /* Safari */
+  transform: scale(1.01);
+}
+
+.card:active {
+  -ms-transform: scale(0.99); /* IE 9 */
+  -webkit-transform: scale(0.99); /* Safari */
+  transform: scale(0.99);
+}
+  </style>
 </head>
+
 <body>
-    <header class="index-header">
-        <div class="header-link">
-            <a href = "#">EXPORT</a>
+  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
+    integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
+    crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"
+    integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy"
+    crossorigin="anonymous"></script>
+  <script>
+
+  </script>
+
+
+
+
+
+
+  <header class="navbar sticky-top bg-dark flex-md-nowrap p-0 shadow py-md-2" data-bs-theme="dark">
+    <a style="text-decoration: none;" class="navbar-brand col-md-3 col-lg-2 my-1 px-3 py-2 text-white h-1"
+      href="#">Nagger</a>
+
+    <ul class="navbar-nav flex-row d-md-none">
+      <li class="nav-item text-nowrap">
+        <button class="navbar-toggler d-md-none mx-2" type="button" data-bs-toggle="offcanvas"
+          data-bs-target="#sidebarMenu" aria-controls="sidebarMenu" aria-expanded="false"
+          aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+      </li>
+    </ul>
+
+  </header>
+
+  <div class="container-fluid" style="min-height: 40em;">
+    <div class="row">
+      <div id="dd" class="sidebar border border-right col-md-2 col-2 col-lg-2 p-0 bg-body-tertiary h-md-100">
+
+        <div  class="offcanvas-md offcanvas-end bg-body-tertiary" tabindex="-1" id="sidebarMenu"
+          aria-labelledby="sidebarMenuLabel">
+          <div class="offcanvas-header">
+            <h5 class="offcanvas-title" id="sidebarMenuLabel">Menu</h5>
+            <button type="button" class="btn-close" data-bs-dismiss="offcanvas" data-bs-target="#sidebarMenu"
+              aria-label="Close"></button>
+          </div>
+          <div class="offcanvas-body d-md-flex flex-column p-0 pt-lg-3 overflow-y-auto">
+            <ul class="nav flex-column">
+              <li class="nav-item">
+                <a class="nav-link d-flex align-items-center gap-2 active" aria-current="page" href="#">
+
+                  Accounts
+                </a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link d-flex align-items-center gap-2" href="#">
+
+                  Devices
+                </a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link d-flex align-items-center gap-2" href="#">
+                  About
+                </a>
+              </li>
+
+              <li class="nav-item">
+                <a class="nav-link d-flex align-items-center gap-2" href="#">
+                  Report a bug
+                </a>
+              </li>
+              <hr class="my-2 mx-3">
+              <li class="nav-item">
+                <a class="nav-link d-flex align-items-center gap-2" href="#">
+                  Log out
+                </a>
+              </li>
+
+            </ul>
+
+
+          </div>
         </div>
+      </div>
 
-        <div class="header-link">
-            <a href = "#">LOAD</a>
-        </div>
-    </header>
-    <main id="index-main">
-        <h1>
-            Your Naggers:
-        </h1>
-       <div class="main-container">
-
-            <div class="nagger-container">
-                <div class="nagger-severity-container">
-                    <div class="severity-label">
-                        <span>Severity:</span>
-                    </div>
-                    <select class="nagger-severity">
-                        <option value="1">mild</option>
-                        <option value="2">medium</option>
-                        <option value="3">severe</option>
-                        <option value="4">aggressive</option>
-                    </select>
-                </div>
-                <div class="nagger-date-created">
-                    <h2>Call a friend</h2>
-                </div>
-                <div class="nagger-content">
-                    <div class="nagger-description-label">
-                        Description:
-                    </div>
-                    <div class="description">Call a friend and ask how they are doing</div>
-                </div>
-                <div class="nagger-buttons">
-                    <button class="nagger-button">Save</button>
-                    <button class="nagger-button">Delete</button>
-                </div>
-            </div>
-
-            <div class="nagger-container">
-                <div class="nagger-severity-container">
-                    <div class="severity-label">
-                        <span>Severity:</span>
-                    </div>
-                    <select class="nagger-severity">
-                        <option value="1">mild</option>
-                        <option value="2">medium</option>
-                        <option value="3">severe</option>
-                        <option value="4">aggressive</option>
-                    </select>
-                </div>
-                <div class="nagger-date-created">
-                    <h2>Task 2</h2>
-                </div>
-                <div class="nagger-content">
-                    <p>Task 2 description</p>
-                </div>
-                <div class="nagger-buttons">
-                    <button class="nagger-button">Save</button>
-                    <button class="nagger-button">Delete</button>
-                </div>
-            </div>
-
-
-
-            <div class="nagger-container">
-                
-                <div class="nagger-severity-container">
-                    <div class="severity-label">
-                        <span>Severity:</span>
-                    </div>
-                    <select class="nagger-severity">
-                        <option value="1">mild</option>
-                        <option value="2">medium</option>
-                        <option value="3">severe</option>
-                        <option value="4">aggressive</option>
-                    </select>
-                </div>
-                <div class="nagger-date-created">
-                    <h2>Task 4</h2>
-                </div>
-                <div class="nagger-content">
-                    <p>Task 4 description</p>
-                </div>
-                <div class="nagger-buttons">
-                    <button class="nagger-button">Save</button>
-                    <button class="nagger-button">Delete</button>
-                </div>
-            </div>
+      <main class="col-md-9 col-lg-10 px-2 px-md-4 py-2 py-md-4">
+        <div class="container-fluid px-0 text-center">
+          <div id="row" class="row g-2 row-cols-2 text-md-center row-cols-lg-3 row-cols-xl-4 row-cols-xxl-5">
 
             
 
-       </div>
-       <div id="main-control-buttons-container">
-            <button id="main-control-button">Add Nagger</button>
-            <button id="main-control-button" onclick="toggleEdit()">Toggle Edit</button>
-       </div>
-    </main>
+            <div class="col d-flex align-items-stretch card-item-column">
+              <div class="border-danger text-bg-dark shadow card flex-grow-1">
+                <div class="card-content">
+                  <div class="card-header">
+                    Title 1
+                  </div>
+                  <div class="card-text px-2">
+                    Lorem ipsum dolor sit amet
+                  </div>
+
+                </div>
+                <div class="card-footer mt-auto mt-auto">
+                  12.03.2024 15:45
+                </div>
+              </div>
+            </div>
+            <div class="col d-flex align-items-stretch card-item-column">
+              <div class="border-danger text-bg-dark shadow card flex-grow-1">
+                <div class="card-content">
+                  <div class="card-header">
+                    Title 1
+                  </div>
+                  <div class="card-text px-2">
+                    Lorem ipsum dolor sit amet
+                  </div>
+
+                </div>
+                <div class="card-footer mt-auto">
+                  12.03.2024 15:45
+                </div>
+              </div>
+            </div>
+            <div class="col d-flex align-items-stretch card-item-column">
+              <div class="border-danger text-bg-dark shadow card flex-grow-1">
+                <div class="card-content">
+                  <div class="card-header">
+                    Title 1
+                  </div>
+                  <div class="card-text px-2">
+                    Lorem ipsum dolor sit amet
+                  </div>
+
+                </div>
+                <div class="card-footer mt-auto">
+                  12.03.2024 15:45
+                </div>
+              </div>
+            </div>
+
+            <div id="plus-card" class="col d-flex align-items-stretch card-item-column">
+              <div class="text-bg-white shadow card flex-grow-1 align-content-center justify-content-center">
+                <div class="card-content">
+
+                  <i class="bi bi-plus align-self-center" style="font-size:3em"></i>
+
+                </div>
+              </div>
+            </div>
+
+          </div>
+        </div>
+      </main>
+    </div>
+  </div>
+  
+  
+  <footer class="bg-dark text-white py-4">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-4">
+          <h5>Contact Us</h5>
+          <p>Email: contact@example.com</p>
+          <p>Phone: (123) 456-7890</p>
+          <p>Address: 123 Main Street, Anytown, USA</p>
+        </div>
+        <div class="col-md-4">
+          <h5>Quick Links</h5>
+          <ul class="list-unstyled">
+            <li><a href="#" class="text-white">About Us</a></li>
+            <li><a href="#" class="text-white">Services</a></li>
+
+          </ul>
+        </div>
+        <div class="col-md-4">
+          <h5>Follow Us</h5>
+          <a href="#" class="text-white me-2"><i class="fab fa-facebook"></i></a>
+          <a href="#" class="text-white me-2"><i class="fab fa-twitter"></i></a>
+          <a href="#" class="text-white me-2"><i class="fab fa-linkedin"></i></a>
+          <a href="#" class="text-white"><i class="fab fa-instagram"></i></a>
+        </div>
+      </div>
+      <div class="row mt-3">
+        <div class="col text-center">
+          <p class="mb-0">© 2024 Your Company Name. All rights reserved.</p>
+        </div>
+      </div>
+    </div>
+  </footer>
+
+  <script src="https://cdn.jsdelivr.net/npm/chart.js@4.3.2/dist/chart.umd.js"
+    integrity="sha384-eI7PSr3L1XLISH8JdDII5YN/njoSsxfbrkCTnJrzXt+ENP5MOVBxD+l6sEG4zoLp"
+    crossorigin="anonymous"></script>
+  <script src="dashboard.js"></script>
 </body>
+
 </html>
