--- a/resources/index.html
+++ b/resources/index.html
@@ -12,10 +12,27 @@
 
   <!-- Custom styles for this template -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
   <!-- Custom styles for this template -->
-
+  <script>
+    var themeBool = false;
+    function changeTheme() {
+      var theme = document.getElementsByTagName('body')[0].getAttribute('data-bs-theme');
+      if (theme == 'dark') {
+        document.getElementsByTagName('body')[0].setAttribute('data-bs-theme', 'light');
+        themeBool = true;
+      } else {
+        document.getElementsByTagName('body')[0].setAttribute('data-bs-theme', 'dark');
+        themeBool = false;
+      }
+    
+    }
+  </script>
 
   <style>
+
+
+
     @media (min-width: 768px) {
       #dd {
         min-height: 100vh;
@@ -29,61 +46,81 @@
 
       #dd {
         max-width: 80%;
+        border-color: #212529;
+        background-color: #212529;
       }
+
       #sidebarMenu {
         max-width: 80%;
+        background-color: #212529;
       }
     }
+
     @media (min-width: 768px) {
       .card-item-column {
         min-height: 18em;
       }
     }
 
-    .cart-footer{
-      margin-top:auto;
+    .cart-footer {
+      margin-top: auto;
     }
 
     .card {
-  transition: .10s, transform .10s ease;
-  -moz-transition: .10s, transform .10s ease;
-  -webkit-transition: .10s, transform .10s ease;
-}
+      transition: .10s, transform .10s ease;
+      -moz-transition: .10s, transform .10s ease;
+      -webkit-transition: .10s, transform .10s ease;
+    }
 
-.card:hover {
-  cursor: pointer;
-  -ms-transform: scale(1.01); /* IE 9 */
-  -webkit-transform: scale(1.01); /* Safari */
-  transform: scale(1.01);
-}
+    .card:hover {
+      cursor: pointer;
+      -ms-transform: scale(1.01);
+      /* IE 9 */
+      -webkit-transform: scale(1.01);
+      /* Safari */
+      transform: scale(1.01);
+    }
 
-.card:active {
-  -ms-transform: scale(0.99); /* IE 9 */
-  -webkit-transform: scale(0.99); /* Safari */
-  transform: scale(0.99);
-}
+    .card:active {
+      -ms-transform: scale(0.99);
+      /* IE 9 */
+      -webkit-transform: scale(0.99);
+      /* Safari */
+      transform: scale(0.99);
+    }
+
   </style>
 </head>
 
-<body>
+<body data-bs-theme="dark">
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
     integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
     crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"
     integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy"
     crossorigin="anonymous"></script>
-  <script>
 
-  </script>
-
-
-
-
-
+    <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h1 class="modal-title fs-5" id="exampleModalLabel">Modal title</h1>
+            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+          </div>
+          <div class="modal-body">
+            ...
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+            <button type="button" class="btn btn-primary">Save changes</button>
+          </div>
+        </div>
+      </div>
+    </div>
 
   <header class="navbar sticky-top bg-dark flex-md-nowrap p-0 shadow py-md-2" data-bs-theme="dark">
     <a style="text-decoration: none;" class="navbar-brand col-md-3 col-lg-2 my-1 px-3 py-2 text-white h-1"
-      href="#">Nagger</a>
+      href="#">lmao</a>
 
     <ul class="navbar-nav flex-row d-md-none">
       <li class="nav-item text-nowrap">
@@ -101,7 +138,7 @@
     <div class="row">
       <div id="dd" class="sidebar border border-right col-md-2 col-2 col-lg-2 p-0 bg-body-tertiary h-md-100">
 
-        <div  class="offcanvas-md offcanvas-end bg-body-tertiary" tabindex="-1" id="sidebarMenu"
+        <div class="offcanvas-md offcanvas-end bg-body-tertiary" tabindex="-1" id="sidebarMenu"
           aria-labelledby="sidebarMenuLabel">
           <div class="offcanvas-header">
             <h5 class="offcanvas-title" id="sidebarMenuLabel">Menu</h5>
@@ -140,6 +177,12 @@
                 </a>
               </li>
 
+              <li class="nav-item">
+                <a class="nav-link d-flex align-items-center gap-2" href="#" onclick="changeTheme()">
+                  Change theme
+                </a>
+              </li>
+
             </ul>
 
 
@@ -151,10 +194,10 @@
         <div class="container-fluid px-0 text-center">
           <div id="row" class="row g-2 row-cols-2 text-md-center row-cols-lg-3 row-cols-xl-4 row-cols-xxl-5">
 
-            
+
 
             <div class="col d-flex align-items-stretch card-item-column">
-              <div class="border-danger text-bg-dark shadow card flex-grow-1">
+              <div class="text-bg-primary shadow card flex-grow-1">
                 <div class="card-content">
                   <div class="card-header">
                     Title 1
@@ -170,7 +213,7 @@
               </div>
             </div>
             <div class="col d-flex align-items-stretch card-item-column">
-              <div class="border-danger text-bg-dark shadow card flex-grow-1">
+              <div class="text-bg-primary shadow card flex-grow-1">
                 <div class="card-content">
                   <div class="card-header">
                     Title 1
@@ -186,7 +229,7 @@
               </div>
             </div>
             <div class="col d-flex align-items-stretch card-item-column">
-              <div class="border-danger text-bg-dark shadow card flex-grow-1">
+              <div class="text-bg-primary shadow card flex-grow-1">
                 <div class="card-content">
                   <div class="card-header">
                     Title 1
@@ -202,11 +245,11 @@
               </div>
             </div>
 
-            <div id="plus-card" class="col d-flex align-items-stretch card-item-column">
+            <div id="plus-card" data-bs-toggle="modal" data-bs-target="#exampleModal" class="col d-flex align-items-stretch card-item-column">
               <div class="text-bg-white shadow card flex-grow-1 align-content-center justify-content-center">
-                <div class="card-content">
+                <div class="card-content text-bg-white">
 
-                  <i class="bi bi-plus align-self-center" style="font-size:3em"></i>
+                  <i class="bi bi-plus align-self-center" style="font-size:4em"></i>
 
                 </div>
               </div>
@@ -217,9 +260,9 @@
       </main>
     </div>
   </div>
-  
-  
-  <footer class="bg-dark text-white py-4">
+
+
+  <footer class="bg-body-tertiary py-4">
     <div class="container">
       <div class="row">
         <div class="col-md-4">
@@ -231,17 +274,17 @@
         <div class="col-md-4">
           <h5>Quick Links</h5>
           <ul class="list-unstyled">
-            <li><a href="#" class="text-white">About Us</a></li>
-            <li><a href="#" class="text-white">Services</a></li>
+            <li><a href="#">About Us</a></li>
+            <li><a href="#">Services</a></li>
 
           </ul>
         </div>
         <div class="col-md-4">
           <h5>Follow Us</h5>
-          <a href="#" class="text-white me-2"><i class="fab fa-facebook"></i></a>
-          <a href="#" class="text-white me-2"><i class="fab fa-twitter"></i></a>
-          <a href="#" class="text-white me-2"><i class="fab fa-linkedin"></i></a>
-          <a href="#" class="text-white"><i class="fab fa-instagram"></i></a>
+          <a href="#" class="me-2"><i class="fab fa-facebook"></i></a>
+          <a href="#" class="me-2"><i class="fab fa-twitter"></i></a>
+          <a href="#" class="me-2"><i class="fab fa-linkedin"></i></a>
+          <a href="#" class="me-2"><i class="fab fa-instagram"></i></a>
         </div>
       </div>
       <div class="row mt-3">
