--- a/resources/index.html
+++ b/resources/index.html
@@ -197,7 +197,7 @@
 
 
             <div class="col d-flex align-items-stretch card-item-column">
-              <div class="text-bg-primary shadow card flex-grow-1">
+              <div class="text-bg-success shadow card flex-grow-1">
                 <div class="card-content">
                   <div class="card-header">
                     Title 1
@@ -213,7 +213,7 @@
               </div>
             </div>
             <div class="col d-flex align-items-stretch card-item-column">
-              <div class="text-bg-primary shadow card flex-grow-1">
+              <div class="text-bg-success shadow card flex-grow-1">
                 <div class="card-content">
                   <div class="card-header">
                     Title 1
@@ -229,7 +229,7 @@
               </div>
             </div>
             <div class="col d-flex align-items-stretch card-item-column">
-              <div class="text-bg-primary shadow card flex-grow-1">
+              <div class="text-bg-success shadow card flex-grow-1">
                 <div class="card-content">
                   <div class="card-header">
                     Title 1
